--- a/package.json
+++ b/package.json
@@ -21,5 +21,5 @@
     "@vitejs/plugin-vue": "^2.0.0",
     "vite": "^2.7.2"
   },
-  "author": "Oka R. Abdillah"
+  "author": "Muhammad Adam Firdaus"
 }
